overflow x fix, readme fix

--- a/ID_S10202623_Assg2_website/style.css
+++ b/ID_S10202623_Assg2_website/style.css
@@ -17,7 +17,7 @@
 }
 /* body style */
 body {
-  overflow-x:hidden;
+  
   background-color: #E1DEDE;
 }
 /* external images style */
@@ -120,7 +120,7 @@ h3{
 @media only screen and (max-width: 992px) {
   .dict{
     height: 150px;
-    margin-left: 10px;
+    
   }
   h3{
     font-size: x-large;
@@ -135,6 +135,9 @@ h3{
   .imgs{
     height: 120px;
   }
+  .content{
+    margin-left: 10px;
+  }
 }
 @media only screen and (max-width: 800px) {
   .imgs{
@@ -144,7 +147,7 @@ h3{
 @media only screen and (max-width: 424px) {
   .dict{
     height: 120px;
-    margin-left: 10px;
+    
     
   }
   h3{
